Web & Desktop SYNC API

--- a/web/templates/fixkosten_template.html
+++ b/web/templates/fixkosten_template.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>FinanzApp Fixkosten verwalten v{{ version }}</title>
+  <title>Fixkosten verwalten</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -246,7 +246,7 @@
 <body>
 
 <header>
-  <h1>Fixkosten verwalten v{{ version }}</h1>
+  <h1>Fixkosten verwalten</h1>
   <div>
     <span class="user">Angemeldet als {{ username }}</span>
     &nbsp;|&nbsp;
@@ -332,7 +332,7 @@
 </main>
 
 <footer>
-  © 2025 xKAISEN – Version {{ version }}
+  © 2025 xKAISEN – Version {{ app_version }}
 </footer>
 
 <script>
