--- a/web/templates/vorschlaege.html
+++ b/web/templates/vorschlaege.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>Vorschläge verwalten v{{ version }}</title>
+  <title>Name/Frima & Verwendungszweck verwalten</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -234,7 +234,7 @@
 <body>
 
 <header>
-  <h1>Vorschläge verwalten v{{ version }}</h1>
+  <h1>Name/Frima & Verwendungszweck verwalten</h1>
   <div>
     <span class="user">Angemeldet als {{ username }}</span>
     &nbsp;|&nbsp;
@@ -312,7 +312,7 @@
 </main>
 
 <footer>
-  © 2025 xKAISEN – Version {{ version }}
+  © 2025 xKAISEN – Version {{ app_version }}
 </footer>
 
 <script>
